--- a/Leaflet-part-1/static/css/style.css
+++ b/Leaflet-part-1/static/css/style.css
@@ -8,3 +8,25 @@ body,
 html {
   height: 100%;
 }
+
+.legend {
+  background-color: white;
+  padding: 10px;
+  line-height: 18px;
+  color: #555;
+}
+
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
+}
+
+.legend .color-scale {
+  width: 100%;
+  height: 10px;
+  background: linear-gradient(to right, #FFEDA0, #FD8D3C, #FC4E2A, #E31A1C, #BD0026, #800026);
+  margin-bottom: 5px;
+}
